[package]
name = "unisecs"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "Unix epoch seconds"
documentation = "https://docs.rs/unisecs/"
homepage = "https://github.com/softprops/unisecs"
repository = "https://github.com/softprops/unisecs"
keywords = ["epoch", "epoch-seconds", "unix", "unix-time"]
license = "MIT"
readme = "README.md"

[badges]
coveralls = { repository = "softprops/unisecs" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "softprops/unisecs" }

[dependencies]
serde = { version = "1.0",  optional = true  }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["serde"]
